gobmkida/g3/dragon_escape
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2242:7: error: use of undeclared identifier 'mx_initialized_1'
if ( !mx_initialized_1 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2244:1: error: use of undeclared identifier 'mx_initialized_1'
mx_initialized_1 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2245:26: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2245:9: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2253:1: error: use of undeclared identifier 'mx_0'
mx_0[v4] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2322:19: error: use of undeclared identifier 'mx_0'
if ( v13 != 3 && !mx_0[v12] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2333:1: error: use of undeclared identifier 'mx_0'
mx_0[v12] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2340:19: error: use of undeclared identifier 'mx_0'
if ( v19 != 3 && !mx_0[v18] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2351:1: error: use of undeclared identifier 'mx_0'
mx_0[v18] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2358:19: error: use of undeclared identifier 'mx_0'
if ( v25 != 3 && !mx_0[v24] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2369:1: error: use of undeclared identifier 'mx_0'
mx_0[v24] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2376:19: error: use of undeclared identifier 'mx_0'
if ( v31 != 3 && !mx_0[v30] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2387:1: error: use of undeclared identifier 'mx_0'
mx_0[v30] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2402:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 + 19] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2412:1: error: use of undeclared identifier 'mx_0'
mx_0[v42] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2421:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 - 21] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2431:1: error: use of undeclared identifier 'mx_0'
mx_0[v44] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2440:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 - 19] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2450:1: error: use of undeclared identifier 'mx_0'
mx_0[v46] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2459:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[( int)v11 + 21] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2469:1: error: use of undeclared identifier 'mx_0'
mx_0[v48] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2500:6: error: use of undeclared identifier 'mx_0'
if ( mx_0[v38] != 1 ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/engine/dragon.c:2510:1: error: use of undeclared identifier 'mx_0'
mx_0[v38] = 0; 
^
23 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/dragon_escape/src/obj/1/dragon.o] Error 1
